--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "kaphein-js-geom",
-  "version": "0.1.0",
+  "version": "0.1.0-rc.1",
   "description": "A geometric toolkit for developing various software in JavaScript.",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist && webpack --mode=production --config webpack.config.js",
+    "test": "eslint src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +24,15 @@
   },
   "homepage": "https://github.com/Hydrawisk793/kaphein-js-geom#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
-    "eslint": "^6.8.0"
+    "copy-webpack-plugin": "^5.1.1",
+    "eslint": "^6.8.0",
+    "typescript": "^3.7.5",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "kaphein-js": "~0.1.1"
+    "kaphein-js": "0.1.0-rc.2"
   }
 }
