--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -1,9 +1,8 @@
 {
-    "root": true,
     "env": {
+        "browser": true,
         "commonjs": true,
-        "es6": true,
-        "node": true
+        "es6": true
     },
     "extends": "eslint:recommended",
     "globals": {
@@ -13,10 +12,6 @@
     "parserOptions": {
         "ecmaVersion": 3
     },
-    "ignorePatterns": [
-        "dist/",
-        "node_modules/"
-    ],
     "rules": {
     }
 }
