--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaphein-js-geom",
-  "version": "0.1.0-rc.1",
+  "version": "0.1.1-rc.1",
   "description": "A geometric toolkit for developing various software in JavaScript.",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "build": "rm -rf dist && webpack --mode=production --config webpack.config.js",
-    "test": "eslint src/**/*.js"
+    "test": "eslint src && eslint src -c src/.eslintrc.ts.json --ext '.d.ts'",
+    "prepublishOnly": "npm test && npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,8 @@
   },
   "homepage": "https://github.com/Hydrawisk793/kaphein-js-geom#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
     "typescript": "^3.7.5",
@@ -33,6 +36,6 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "kaphein-js": "0.1.0-rc.2"
+    "kaphein-js": "^0.1.3"
   }
 }
