--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -1,17 +1,8 @@
 {
     "env": {
         "browser": true,
+        "node": false,
         "commonjs": true,
         "es6": true
-    },
-    "extends": "eslint:recommended",
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaVersion": 3
-    },
-    "rules": {
     }
 }
