--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaphein-js-geom",
-  "version": "0.1.1-rc.2",
+  "version": "0.1.1",
   "description": "A geometric toolkit for developing various software in JavaScript.",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -36,6 +36,6 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "kaphein-js": "^0.1.3"
+    "kaphein-js": "^0.1.5"
   }
 }
