--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaphein-js-geom",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A geometric toolkit for developing various software in JavaScript.",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -9,9 +9,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && webpack --mode=production --config webpack.config.js",
-    "test": "eslint src && eslint src -c src/.eslintrc.ts.json --ext '.d.ts'",
-    "prepublishOnly": "npm test && npm run build"
+    "lint": "eslint src && eslint src -c src/.eslintrc.ts.json --ext '.d.ts'",
+    "build": "rm -rf dist && npm run lint && webpack --mode=production --config webpack.config.js",
+    "prepack": "npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -29,8 +29,8 @@
     "@typescript-eslint/parser": "^2.19.2",
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
+    "terser-webpack-plugin": "^2.3.5",
     "typescript": "^3.7.5",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
