build: correct npm build script.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "lint": "eslint src && eslint src -c src/.eslintrc.ts.json --ext '.d.ts'",
-    "build": "rm -rf dist && npm run lint && webpack --mode=production --config webpack.config.js",
+    "build": "rm -rf dist && npm run lint && webpack --mode production --config webpack.config.js",
     "prepack": "npm install && npm run build"
   },
   "repository": {
