--- a/package.json
+++ b/package.json
@@ -1,41 +1,38 @@
 {
-  "name": "kaphein-js-geom",
-  "version": "0.1.4",
-  "description": "A geometric toolkit for developing various software in JavaScript.",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "lint": "eslint src && eslint src -c src/.eslintrc.ts.json --ext '.d.ts'",
-    "build": "rm -rf dist && npm run lint && webpack --mode production --config webpack.config.js",
-    "prepack": "npm install && npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Hydrawisk793/kaphein-js-geom.git"
-  },
-  "bundleDependencies": [],
-  "author": "Hydrawisk793 <hyw793@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Hydrawisk793/kaphein-js-geom/issues"
-  },
-  "homepage": "https://github.com/Hydrawisk793/kaphein-js-geom#readme",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
-    "copy-webpack-plugin": "^5.1.1",
-    "eslint": "^6.8.0",
-    "terser-webpack-plugin": "^2.3.5",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "dependencies": {
-    "kaphein-js": "^0.3.3"
-  }
+    "name": "kaphein-js-geom",
+    "version": "0.1.4",
+    "description": "A geometric toolkit for developing various software in JavaScript.",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "lint": "tsc --project tsconfig.dts.json && eslint src/**/*.js",
+        "lint:fix": "npm run lint -- --fix",
+        "build": "rm -rf dist && npm run lint && webpack --mode production",
+        "prepack": "npm install && npm run build"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Hydrawisk793/kaphein-js-geom.git"
+    },
+    "author": "Hydrawisk793 <hyw793@gmail.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Hydrawisk793/kaphein-js-geom/issues"
+    },
+    "homepage": "https://github.com/Hydrawisk793/kaphein-js-geom#readme",
+    "bundleDependencies": [],
+    "dependencies": {
+        "kaphein-js": "~0.14.3"
+    },
+    "devDependencies": {
+        "copy-webpack-plugin": "^6.4.1",
+        "eslint": "^7.20.0",
+        "typescript": "^4.1.5",
+        "webpack": "^4.46.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-node-externals": "^2.5.2"
+    }
 }
