--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "devDependencies": {
         "copy-webpack-plugin": "^6.4.1",
         "eslint": "^7.20.0",
+        "husky": "^2.7.0",
         "typescript": "^4.1.5",
         "webpack": "^4.46.0",
         "webpack-cli": "^3.3.12",
